--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="container">
         <div class="cabecera">
-            FACEBOOK
+            FACEBOOK 2.0
             <p class="title-paragraph">
                 Tu página de master
             </p>
